# 3d_reconstructor

./: .gitignore  .qglviewer.xml  CMakeLists.txt  README.md  cgal_function.cpp  image_list.xml  output_camera.yml  test.ply
data/cam/: run_arg.TXT
include/: cameraCalibration.h  cgal.h  disparityMap.h  math.h  opencv.h  stereoCalibration.h  vertexDetection.h
src/: cameraCalibration.cpp  cgal.cpp  disparityMap.cpp  main.cpp  math.cpp  opencv.cpp  stereoCalibration.cpp  vertexDetection.cpp
